# esp32-s3-voice-input

./: .gitignore  CMakeLists.txt  README.md  build_verbose.txt  esp32s3.code-workspace  partitions.csv  process_flow_description.txt  sdkconfig  sdkconfig.old  settings.json
.github/: copilot-instructions.md
components/audio/: CMakeLists.txt  assist_http.c  assist_http.h  vad.c  vad.h
components/audio_play_driver/: CMakeLists.txt  audio_driver.c  audio_driver.h
components/esp_lcd_jd9853/: esp_lcd_jd9853.c
components/esp_lcd_touch/: CMakeLists.txt
components/esp_lcd_touch/include/: esp_lcd_touch.h
components/esp_lcd_touch/src/: esp_lcd_touch_stubs.c
components/hardware_driver/: CMakeLists.txt  bsp_board.h
components/i2c_master/: CMakeLists.txt
components/i2c_master/include/: i2c_master.h
components/i2c_master/include/driver/: i2c_master.h
components/i2c_master/src/: i2c_master.c
components/lcd_driver/: CMakeLists.txt  lcd_driver.c  lcd_driver.h
components/lvgl_driver/: CMakeLists.txt  lvgl_driver.c
components/speech_det_driver/: CMakeLists.txt  mic_speech.c  mic_speech.h  speech.c  speech.h
components/tca9555_driver/: CMakeLists.txt  tca9555_driver.c
components/voice/: CMakeLists.txt  assist_http.c  vad.c  vad.h
demo_code/: sdkconfig  sdkconfig.old
demo_code/main/: Kconfig.projbuild  idf_component.yml
demo_code/main/audio_play_driver/: audio_driver.c  audio_driver.h
demo_code/main/camera_driver/: camera_driver.c  camera_driver.h
demo_code/main/hardeware_driver/: bsp_board.c  bsp_board.h
demo_code/main/lcd_driver/: lcd_driver.h
demo_code/main/lvgl_driver/: lvgl_driver.c  lvgl_driver.h
demo_code/main/lvgl_ui/: lvgl_example.c  lvgl_example.h
demo_code/main/touch_driver/: touch_driver.c  touch_driver.h
demo_code/main/touch_driver/CST328/: CST328.c  CST328.h
demo_code/main/touch_driver/CST816/: CST816.c  CST816.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/audio/: assist_http.c  assist_http.h  vad.c  vad.h
main/audio_play_driver/: audio_driver.c  audio_driver.h
main/lcd_driver/: lcd_driver.c
main/network/: conversation_api.c  conversation_api.h  mqtt.c  mqtt.h  piper_tts.c  piper_tts.h  stt.c  stt.h  wifi.c  wifi.h  wyoming_stt.c  wyoming_stt.h
main/speech_det_driver/: mic_speech.c  mic_speech.c.bak  mic_speech.c.removed  mic_speech.h  speech.c  speech.h
